[tool.poetry]
name = "ci-plumber"
version = "1.3.1"
description = "Plumb together different CI/CD services"
authors = ["Miles Budden <git@miles.so>"]
readme = "README.md"
homepage = "https://github.com/pbexe/ci-plumber"
repository = "https://github.com/pbexe/ci-plumber"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Other Environment",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Typing :: Typed",
]

[tool.poetry.scripts]
ci-plumber = "ci_plumber.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.3.2"}
python-gitlab = "^2.10.0"
GitPython = "^3.1.20"
types-requests = "^2.25.2"
importlib-metadata = "^4.6.3"
openshift = "^0.12.1"
framework-detector = "^0.2.1"
rich = "^10.7.0"
ci-plumber-openshift = {version = "^0.2.0", optional = true}
ci-plumber-gitlab = {version = "^0.1.0", optional = true}
ci-plumber-azure = {version = "^0.2.0", optional = true}

[tool.poetry.extras]
all = ["ci-plumber-openshift", "ci-plumber-gitlab", "ci-plumber-azure"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.12.1"
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
black = {version = "^21.6b0", allow-prereleases = true}
mypy = "^0.910"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py
)
'''
