[tool.poetry]
name = "ci_plumber_azure"
version = "0.2.0"
description = ""
authors = ["Miles Budden <git@miles.so>"]

[tool.poetry.dependencies]
python = "^3.9"
ci-plumber = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
